--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <span style="color: rgb(17, 4, 75); background-color: darkseagreen;">Üzeri için:</span>
             </b>
                 <ul>
-                    <li>3-4 adet elma/li>
+                    <li>3-4 adet elma</li>
                     <li>2 yemek kaşığı toz şeker</li>
                     <li>1 tatlı kaşığı tarçın</li>
                 </ul>
